--- a/2. Smart factory/algoritmo_genetico.ipynb
+++ b/2. Smart factory/algoritmo_genetico.ipynb
@@ -35,8 +35,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "def fitness_function(x):\n",
     "    return x * np.sin(10 * np.pi * x) + 1.0\n",
+    "\n",
     "\n",
     "x_vals = np.linspace(-1, 2, 1000)\n",
     "y_vals = fitness_function(x_vals)"
@@ -79,7 +81,7 @@
     "generations = 100\n",
     "crossover_rate = 0.8\n",
     "mutation_rate = 0.1\n",
-    "domain = (-1, 2)\n"
+    "domain = (-1, 2)"
    ]
   },
   {
@@ -136,7 +138,7 @@
     "plt.ylabel(\"f(x)\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -187,14 +189,19 @@
     "\n",
     "plt.figure(figsize=(8, 4))\n",
     "plt.plot(x_vals, y_vals, label=\"Funzione obiettivo\")\n",
-    "plt.scatter([parent1, parent2], fitness_function(np.array([parent1, parent2])), color=\"blue\", label=\"Genitori\")\n",
+    "plt.scatter(\n",
+    "    [parent1, parent2],\n",
+    "    fitness_function(np.array([parent1, parent2])),\n",
+    "    color=\"blue\",\n",
+    "    label=\"Genitori\",\n",
+    ")\n",
     "plt.scatter(child, fitness_function(child), color=\"orange\", label=\"Figlio (crossover)\")\n",
     "plt.title(\"Esempio di crossover\")\n",
     "plt.xlabel(\"x\")\n",
     "plt.ylabel(\"f(x)\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -251,7 +258,7 @@
     "plt.ylabel(\"f(x)\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -285,21 +292,24 @@
     "def initialize_population():\n",
     "    return np.random.uniform(domain[0], domain[1], population_size)\n",
     "\n",
+    "\n",
     "def tournament_selection(pop, fitness, k=3):\n",
     "    selected = np.random.choice(pop, k)\n",
     "    selected_fitness = fitness_function(selected)\n",
     "    return selected[np.argmax(selected_fitness)]\n",
+    "\n",
     "\n",
     "def crossover(parent1, parent2):\n",
     "    if np.random.rand() < crossover_rate:\n",
     "        return 0.5 * (parent1 + parent2)\n",
     "    return parent1\n",
     "\n",
+    "\n",
     "def mutate(x):\n",
     "    if np.random.rand() < mutation_rate:\n",
     "        x += np.random.normal(0, 0.1)\n",
     "        x = np.clip(x, domain[0], domain[1])\n",
-    "    return x\n"
+    "    return x"
    ]
   },
   {
@@ -395,13 +405,15 @@
     "    if gen % 20 == 0 or gen == generations - 1:\n",
     "        plt.figure(figsize=(8, 4))\n",
     "        plt.plot(x_vals, y_vals, label=\"Funzione obiettivo\")\n",
-    "        plt.scatter(population, fitness_function(population), color=\"red\", label=\"Popolazione\")\n",
+    "        plt.scatter(\n",
+    "            population, fitness_function(population), color=\"red\", label=\"Popolazione\"\n",
+    "        )\n",
     "        plt.title(f\"Generazione {gen}\")\n",
     "        plt.xlabel(\"x\")\n",
     "        plt.ylabel(\"f(x)\")\n",
     "        plt.legend()\n",
     "        plt.grid(True)\n",
-    "        plt.show()\n"
+    "        plt.show()"
    ]
   },
   {
@@ -424,7 +436,7 @@
     "best_value = fitness_function(best_individual)\n",
     "\n",
     "print(f\"Miglior individuo: x = {best_individual:.5f}\")\n",
-    "print(f\"Valore massimo f(x): {best_value:.5f}\")\n"
+    "print(f\"Valore massimo f(x): {best_value:.5f}\")"
    ]
   },
   {
@@ -453,7 +465,7 @@
     "plt.ylabel(\"Fitness\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
