--- a/2. Smart factory/manutenzione_predittiva.ipynb
+++ b/2. Smart factory/manutenzione_predittiva.ipynb
@@ -11,6 +11,7 @@
     "from fastdtw import fastdtw\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
     "def generate_archive(num_curves=100, min_length=100, max_length=1000, n_features=3):\n",
     "    archive = []\n",
     "    for _ in range(num_curves):\n",
@@ -18,6 +19,7 @@
     "        features = simulate_curve(length=length, n_features=n_features)\n",
     "        archive.append(features)\n",
     "    return archive\n",
+    "\n",
     "\n",
     "def plot_archive(archive):\n",
     "    n_features = archive[0].shape[1]\n",
@@ -29,11 +31,12 @@
     "    for i in range(n_features):\n",
     "        for curve in archive:\n",
     "            axs[i].plot(curve[:, i], alpha=0.7)\n",
-    "        axs[i].set_title(f\"Feature {i+1}\")\n",
+    "        axs[i].set_title(f\"Feature {i + 1}\")\n",
     "        axs[i].set_ylabel(\"Value\")\n",
     "    axs[-1].set_xlabel(\"Time\")\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
+    "\n",
     "\n",
     "def simulate_curve(length=500, n_features=3, explosion_start_ratio=0.8):\n",
     "    t = np.linspace(0, 1, length)\n",
@@ -48,11 +51,12 @@
     "        explosion = np.clip(explosion, 0, None)\n",
     "\n",
     "        c, factor = np.random.uniform(0.1, 2), np.random.uniform(5, 15)\n",
-    "        feature_curve = np.exp(c*t + factor*explosion) + noise\n",
+    "        feature_curve = np.exp(c * t + factor * explosion) + noise\n",
     "        features.append(feature_curve)\n",
     "\n",
     "    features = np.vstack(features).T\n",
     "    return features\n",
+    "\n",
     "\n",
     "np.random.seed(42)"
    ]
@@ -113,12 +117,15 @@
     "    for idx, curve in enumerate(archive):\n",
     "        if len(curve) < partial_len:\n",
     "            continue\n",
-    "        dist, _ = fastdtw(partial_curve[:partial_len], curve[:partial_len], dist=euclidean_dist)\n",
+    "        dist, _ = fastdtw(\n",
+    "            partial_curve[:partial_len], curve[:partial_len], dist=euclidean_dist\n",
+    "        )\n",
     "        if dist < best_dist:\n",
     "            best_dist = dist\n",
     "            best_idx = idx\n",
     "    estimated_rul = len(archive[best_idx]) - partial_len\n",
     "    return estimated_rul, archive[best_idx], best_idx\n",
+    "\n",
     "\n",
     "def euclidean_dist(a, b):\n",
     "    return np.linalg.norm(a - b)\n",
