Substituted chrome with firefox for web scraping and various other improvements

--- a/3. Supply chain/stock_optimization.ipynb
+++ b/3. Supply chain/stock_optimization.ipynb
@@ -22,6 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -59,7 +60,7 @@
     "z = norm.ppf(service_level)\n",
     "\n",
     "vendite_giornaliere = np.random.poisson(5, size=giorni)\n",
-    "date = pd.date_range(start=\"2025-01-01\", periods=giorni)\n",
+    "date = pd.date_range(start=datetime.datetime.now(), periods=giorni)\n",
     "df = pd.DataFrame({\"data\": date, \"vendita_prevista\": vendite_giornaliere})"
    ]
   },
@@ -133,7 +134,8 @@
    "source": [
     "df[\"trigger_ordine\"] = df[\"stock\"] <= livello_riordino\n",
     "idx_trigger = df[df[\"trigger_ordine\"]].index.min()\n",
-    "data_ordine = df.loc[idx_trigger, \"data\"] if idx_trigger is not None else None"
+    "data_ordine = df.loc[idx_trigger, \"data\"] if idx_trigger is not None else None\n",
+    "data_ordine.date() if data_ordine is not None else None"
    ]
   },
   {
