--- a/1. Recommendations e web scraping/web_scraping.ipynb
+++ b/1. Recommendations e web scraping/web_scraping.ipynb
@@ -26,18 +26,17 @@
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.firefox.service import Service\n",
+    "from selenium.webdriver.firefox.options import Options\n",
     "from selenium.webdriver.common.by import By\n",
-    "from webdriver_manager.chrome import ChromeDriverManager\n",
     "\n",
-    "options = webdriver.ChromeOptions()\n",
+    "options = Options()\n",
     "options.add_argument(\"--headless\")\n",
-    "options.add_argument(\"--no-sandbox\")\n",
-    "options.add_argument(\"--disable-dev-shm-usage\")\n",
     "\n",
-    "driver = webdriver.Chrome(\n",
-    "    service=Service(ChromeDriverManager().install()), options=options\n",
-    ")"
+    "driver = webdriver.Firefox(\n",
+    "    service=Service(\"/usr/bin/geckodriver\"),\n",
+    "    options=options\n",
+    ")\n"
    ]
   },
   {
