--- a/3. Supply chain/forecasting.ipynb
+++ b/3. Supply chain/forecasting.ipynb
@@ -302,8 +302,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\"\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.layers import Dense\n",
     "from tensorflow.keras.models import Sequential\n",
