Revert a chrome con nuova configurazione

--- a/1. Recommendations e web scraping/web_scraping.ipynb
+++ b/1. Recommendations e web scraping/web_scraping.ipynb
@@ -26,17 +26,16 @@
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "from selenium.webdriver.firefox.service import Service\n",
-    "from selenium.webdriver.firefox.options import Options\n",
-    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.chrome.options import Options\n",
     "\n",
     "options = Options()\n",
+    "options.binary_location = \"/usr/bin/chromium-browser\"\n",
     "options.add_argument(\"--headless\")\n",
+    "options.add_argument(\"--no-sandbox\")\n",
+    "options.add_argument(\"--disable-dev-shm-usage\")\n",
     "\n",
-    "driver = webdriver.Firefox(\n",
-    "    service=Service(\"/usr/bin/geckodriver\"),\n",
-    "    options=options\n",
-    ")\n"
+    "driver = webdriver.Chrome(service=Service(\"/usr/local/bin/chromedriver\"), options=options)\n"
    ]
   },
   {
