Modificato di nuovo DockerFile

--- a/1. Recommendations e web scraping/web_scraping.ipynb
+++ b/1. Recommendations e web scraping/web_scraping.ipynb
@@ -30,7 +30,7 @@
     "from selenium.webdriver.chrome.options import Options\n",
     "\n",
     "options = Options()\n",
-    "options.binary_location = \"/usr/bin/chromium-browser\"\n",
+    "options.binary_location = \"/usr/bin/chromium\"\n",
     "options.add_argument(\"--headless\")\n",
     "options.add_argument(\"--no-sandbox\")\n",
     "options.add_argument(\"--disable-dev-shm-usage\")\n",
