Modificato di nuovo DockerFile

--- a/1. Recommendations e web scraping/web_scraping.ipynb
+++ b/1. Recommendations e web scraping/web_scraping.ipynb
@@ -30,12 +30,12 @@
     "from selenium.webdriver.chrome.options import Options\n",
     "\n",
     "options = Options()\n",
-    "options.binary_location = \"/usr/bin/chromium\"\n",
-    "options.add_argument(\"--headless\")\n",
-    "options.add_argument(\"--no-sandbox\")\n",
-    "options.add_argument(\"--disable-dev-shm-usage\")\n",
+    "options.add_argument('--headless')\n",
+    "options.add_argument('--no-sandbox')\n",
+    "options.add_argument('--disable-dev-shm-usage')\n",
     "\n",
-    "driver = webdriver.Chrome(service=Service(\"/usr/local/bin/chromedriver\"), options=options)\n"
+    "service = Service('/usr/bin/google-chrome')  # o 'google-chrome-stable'\n",
+    "driver = webdriver.Chrome(service=service, options=options)\n"
    ]
   },
   {
