--- a/1. Recommendations e web scraping/web_scraping.ipynb
+++ b/1. Recommendations e web scraping/web_scraping.ipynb
@@ -34,7 +34,7 @@
     "options.add_argument('--no-sandbox')\n",
     "options.add_argument('--disable-dev-shm-usage')\n",
     "\n",
-    "service = Service('/usr/bin/google-chrome')  # o 'google-chrome-stable'\n",
+    "service = Service('/usr/local/bin/chromedriver')\n",
     "driver = webdriver.Chrome(service=service, options=options)\n"
    ]
   },
