Sostituito selenium per web scraping perché incompatibile con binder

--- a/1. Recommendations e web scraping/web_scraping.ipynb
+++ b/1. Recommendations e web scraping/web_scraping.ipynb
@@ -5,171 +5,182 @@
    "id": "0",
    "metadata": {},
    "source": [
-    "# Web Scraping con Selenium in Python\n",
-    "Questo notebook mostra come utilizzare **Selenium**, una libreria Python per l'automazione del browser, per effettuare scraping di dati da siti web dinamici.\n",
+    "# Introduzione al Web Scraping con Python\n",
     "\n",
-    "## Obiettivi:\n",
-    "- Installare e configurare Selenium\n",
-    "- Eseguire il browser in modo automatico\n",
-    "- Navigare su una pagina web\n",
-    "- Estrarre informazioni da elementi HTML\n",
-    "- Eseguire scraping da siti con contenuto dinamico (JavaScript)\n",
+    "In questo notebook mostreremo come effettuare Web Scraping usando due librerie leggere e potenti: `requests` e `BeautifulSoup`.\n",
     "\n",
-    "**Nota:** Usare Selenium con moderazione e nel rispetto dei termini di servizio dei siti web."
+    "Eviteremo strumenti complessi come `Selenium`, così che il codice sia eseguibile anche su ambienti come [Binder](https://mybinder.org).\n",
+    "\n",
+    "Obiettivo: Estrarre titoli e link delle notizie dalla homepage di un sito web semplice e statico."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.chrome.service import Service\n",
-    "from selenium.webdriver.chrome.options import Options\n",
+    "## 1. Cos'è il Web Scraping?\n",
     "\n",
-    "options = Options()\n",
-    "options.add_argument('--headless')\n",
-    "options.add_argument('--no-sandbox')\n",
-    "options.add_argument('--disable-dev-shm-usage')\n",
+    "Il Web Scraping è la tecnica di estrazione automatica di contenuti da pagine web.\n",
     "\n",
-    "service = Service('/usr/local/bin/chromedriver')\n",
-    "driver = webdriver.Chrome(service=service, options=options)\n"
+    "### Componenti principali:\n",
+    "- **HTTP client**: per inviare richieste e ricevere le pagine HTML (es. `requests`)\n",
+    "- **Parser HTML**: per analizzare e navigare la struttura del documento HTML (es. `BeautifulSoup`)\n",
+    "\n",
+    "**Attenzione**: Prima di effettuare scraping su un sito web, verifica i suoi termini di servizio e il file `robots.txt`."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2",
    "metadata": {},
-   "source": [
-    "## Caricare una pagina web\n",
-    "\n",
-    "In questo esempio caricheremo la homepage di un sito di esempio per test di scraping: [https://quotes.toscrape.com](https://quotes.toscrape.com)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3",
-   "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://quotes.toscrape.com\"\n",
-    "driver.get(url)\n",
-    "print(driver.title)"
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "source": [
-    "## Selezionare elementi HTML\n",
+    "## 2. Esempio base: Estrazione titoli da un sito web\n",
     "\n",
-    "Useremo `driver.find_elements()` per selezionare tutte le citazioni presenti nella pagina."
+    "Come esempio useremo il sito [https://quotes.toscrape.com/](https://quotes.toscrape.com/), pensato proprio per fare pratica con lo scraping.\n",
+    "\n",
+    "Vogliamo ottenere una lista delle citazioni presenti nella homepage."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "quotes = driver.find_elements(By.CLASS_NAME, \"quote\")\n",
+    "url = \"https://quotes.toscrape.com/\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "response.status_code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5",
+   "metadata": {},
+   "source": [
+    "### Analisi della risposta\n",
+    "\n",
+    "Se il codice di stato è `200`, la richiesta ha avuto successo e possiamo analizzare il contenuto HTML."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html = response.text\n",
+    "soup = BeautifulSoup(html, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "## 3. Navigare il DOM con BeautifulSoup\n",
+    "\n",
+    "Analizziamo la struttura del documento per trovare dove sono contenute le citazioni. Ogni citazione è in un elemento `<div class=\"quote\">`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quotes = soup.find_all(\"div\", class_=\"quote\")\n",
     "len(quotes)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6",
-   "metadata": {},
-   "source": [
-    "## Estrazione del contenuto\n",
-    "\n",
-    "Ogni elemento `quote` contiene una citazione, un autore e una lista di tag. Estrarremo queste informazioni."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for quote in quotes:\n",
-    "    text = quote.find_element(By.CLASS_NAME, \"text\").text\n",
-    "    author = quote.find_element(By.CLASS_NAME, \"author\").text\n",
-    "    tags = [tag.text for tag in quote.find_elements(By.CLASS_NAME, \"tag\")]\n",
-    "    print(f\"Citazione: {text}\\nAutore: {author}\\nTag: {tags}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8",
-   "metadata": {},
-   "source": [
-    "## Navigare tra più pagine\n",
-    "\n",
-    "Molti siti hanno contenuti paginati. Mostriamo come fare scraping su più pagine cliccando su \"Next\"."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "all_quotes = []\n",
+    "## 4. Estrazione dei dati\n",
     "\n",
-    "while True:\n",
-    "    quotes = driver.find_elements(By.CLASS_NAME, \"quote\")\n",
-    "    for quote in quotes:\n",
-    "        text = quote.find_element(By.CLASS_NAME, \"text\").text\n",
-    "        author = quote.find_element(By.CLASS_NAME, \"author\").text\n",
-    "        tags = [tag.text for tag in quote.find_elements(By.CLASS_NAME, \"tag\")]\n",
-    "        all_quotes.append({\"text\": text, \"author\": author, \"tags\": tags})\n",
-    "\n",
-    "    try:\n",
-    "        next_button = driver.find_element(By.CLASS_NAME, \"next\")\n",
-    "        next_button.find_element(By.TAG_NAME, \"a\").click()\n",
-    "    except Exception:\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "10",
-   "metadata": {},
-   "source": [
-    "## Analisi dei dati\n",
-    "\n",
-    "Ora possiamo caricare le citazioni raccolte in un DataFrame per un'analisi o esportazione."
+    "Per ogni citazione, estraiamo:\n",
+    "- Il testo della citazione\n",
+    "- L'autore\n",
+    "- Le tag associate"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.DataFrame(all_quotes)\n",
-    "df.head()"
+    "for quote in quotes[:3]:\n",
+    "    text = quote.find(\"span\", class_=\"text\").get_text()\n",
+    "    author = quote.find(\"small\", class_=\"author\").get_text()\n",
+    "    tags = [tag.get_text() for tag in quote.find_all(\"a\", class_=\"tag\")]\n",
+    "    print(f\"CITAZIONE: {text}\")\n",
+    "    print(f\"  AUTORE: {author}\")\n",
+    "    print(f\"  TAG: {tags}\")\n",
+    "    print()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
-    "## Chiudere il browser\n",
+    "## 5. Scraping di più pagine\n",
     "\n",
-    "È buona norma chiudere il WebDriver al termine dello scraping."
+    "Il sito ha una paginazione classica con un link `Next`.\n",
+    "\n",
+    "Vediamo come fare scraping su più pagine navigando automaticamente finché esiste la pagina successiva."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quotes_data = []\n",
+    "url = \"https://quotes.toscrape.com/\"\n",
+    "\n",
+    "while url:\n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
+    "    \n",
+    "    for quote in soup.find_all(\"div\", class_=\"quote\"):\n",
+    "        text = quote.find(\"span\", class_=\"text\").get_text()\n",
+    "        author = quote.find(\"small\", class_=\"author\").get_text()\n",
+    "        tags = [tag.get_text() for tag in quote.find_all(\"a\", class_=\"tag\")]\n",
+    "        quotes_data.append({\n",
+    "            \"text\": text,\n",
+    "            \"author\": author,\n",
+    "            \"tags\": tags\n",
+    "        })\n",
+    "\n",
+    "    next_btn = soup.find(\"li\", class_=\"next\")\n",
+    "    if next_btn:\n",
+    "        next_link = next_btn.find(\"a\")[\"href\"]\n",
+    "        url = \"https://quotes.toscrape.com\" + next_link\n",
+    "    else:\n",
+    "        url = None"
    ]
   },
   {
@@ -179,28 +190,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver.quit()"
+    "len(quotes_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quotes_data[:2]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
-    "# Conclusioni\n",
+    "## Salvataggio dei dati in CSV\n",
+    "\n",
+    "Salviamo la lista di citazioni estratte in un file CSV, per poterla usare o analizzare successivamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_filename = \"quotes.csv\"\n",
+    "with open(csv_filename, mode=\"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames=[\"text\", \"author\", \"tags\"])\n",
+    "    writer.writeheader()\n",
+    "    for row in quotes_data:\n",
+    "        row[\"tags\"] = \", \".join(row[\"tags\"])\n",
+    "        writer.writerow(row)\n",
+    "print(f\"Dati salvati su {csv_filename}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17",
+   "metadata": {},
+   "source": [
+    "## Esempio di autenticazione Basic HTTP\n",
+    "\n",
+    "Se un sito è protetto da autenticazione Basic HTTP, puoi passare le credenziali con `requests`.\n",
+    "\n",
+    "Per esempio, se un sito richiede username e password:\n",
+    "\n",
+    "- user: `admin`\n",
+    "- password: `password123`\n",
+    "\n",
+    "Puoi fare così:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auth_url = \"https://httpbin.org/basic-auth/admin/password123\"\n",
+    "response_auth = requests.get(auth_url, auth=(\"admin\", \"password123\"))\n",
+    "\n",
+    "if response_auth.status_code == 200:\n",
+    "    print(\"Autenticazione riuscita\")\n",
+    "    data = response_auth.json()\n",
+    "    print(data)\n",
+    "else:\n",
+    "    print(f\"Autenticazione fallita con codice {response_auth.status_code}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19",
+   "metadata": {},
+   "source": [
+    "## 6. Conclusioni\n",
     "\n",
     "In questo notebook abbiamo imparato a:\n",
-    "- Usare Selenium per aprire e controllare un browser\n",
-    "- Navigare un sito e identificare elementi HTML\n",
-    "- Estrarre contenuti e salvarli in un formato strutturato\n",
-    "- Gestire più pagine dinamicamente\n",
+    "- Effettuare richieste HTTP con `requests`\n",
+    "- Analizzare e navigare un documento HTML con `BeautifulSoup`\n",
+    "- Estrarre dati strutturati da più pagine\n",
     "\n",
-    "🚀 Estensioni possibili:\n",
-    "- Gestione di CAPTCHA o login\n",
-    "- Utilizzo di Selenium con altri strumenti (BeautifulSoup, pandas)\n",
-    "- Screenshot e test automatici di UI\n",
+    "### Prossimi passi:\n",
+    "- Salvare i dati in CSV o JSON\n",
+    "- Gestire siti più complessi con contenuti dinamici (JavaScript)\n",
+    "- Analizzare il `robots.txt` per rispetto delle regole di scraping\n",
     "\n",
-    "📌 Ricorda: **scraping responsabile sempre.**"
+    "---"
    ]
   }
  ],
